@startuml
skinparam classAttributeIconSize 0

class User {
  +id : int
  +name : string
  +email : string
  +password : string
  +role : string
}

class Event {
  +id : int
  +title : string
  +description : text
  +event_date : datetime
  +image : string
  +status : boolean
  +created_at : datetime
  +updated_at : datetime
}

class Category {
  +id : int
  +name : string
  +created_at : datetime
  +updated_at : datetime
}


User "1" -- "many" Event : creates
Event "many" -- "many" Category : belongsToMany


@enduml
